# o2md

./: .gitattributes  .gitignore  HANDOFF.md  LICENSE  MERMAID_FEASIBILITY_REPORT.md  README.md  README_JP.md  README_jp.md  batch_convert.ps1  chart_utils.py  d2md.py  d2md_charts.py  image_processor.py  img2md.py  isolated_group_renderer.py  jtd2md.py  jtd2md_table.py  o2md.py  o2md_comparison.md  p2md.py  pdf2md.py  pdf2md_docling.py  pdf2md_figures.py  pdf2md_ocr.py  pdf2md_tables.py  pdf2md_text.py  pyproject.toml  utils.py  x2md.py  x2md_charts.py  x2md_graphics.py  x2md_tables.py
before_pr27_output/: three_sheet_.md
docs/: chart_data_extraction_handoff.md  o2md_comparison.md
drug_slang_poc/: __init__.py  config.py  main.py  nlp_pipeline.py  noise_filter.py  requirements.txt  slang_detector.py  tweet_client.py
fess/: Dockerfile  README.md  compose.yaml  contentlength.xml  custom-mimetypes.xml  extractor.xml
input_files/: Book1.xlsx  Support Manager外部仕様書.docx  SurportManagerAPI連携対応_検討資料.xlsx  discrete_regions_test.xlsx  excel_shapes_sample.xlsx  excel_with_chart.xlsx  feature_test.pptx  five_sheet_.xlsx  font_format_test.xlsx  isolated_group_renderer.docx  mail_furiwake_.xlsx  multi_sheet_sample.xlsx  one_.pptx  one_sheet_.xlsx  sample_document.docx  sample_presentation.pptx  shapes_presentation.pptx  simple_data.xlsx  six_sheet_.xlsx  table_sample.xlsx  test_all_charts.docx  test_excel_charts.xlsx  test_features.docx  test_group_shapes.docx  test_project.xml  test_sample.ppt  three_sheet_.xlsx  tow_sheet_.xlsx  two_.ppt  two_.pptx  word_shapes_sample.docx  別冊_送信設定-初期値一覧_JP版.xlsx  自動発番見出しサンプル.docx
main_output/: one_sheet_.md
modified_output/: three_sheet_.md  tow_sheet_.md
native/mpp-reader/: build.gradle  settings.gradle
native/mpp-reader/src/main/java/com/github/matsu582/mppreader/: MppReader.java
native/mpp-reader/src/main/resources/: log4j2.component.properties
o2md/: __init__.py  d2md.py  d2md_charts.py  filter.py  i18n.py  img2md.py  isolated_group_renderer.py  jar_manager.py  jtd2md.py  jtd2md_legacy.py  mpp2md.py  o2md.py  p2md.py  pdf2md.py  pdf2md_docling.py  pdf2md_figures.py  pdf2md_ocr.py  pdf2md_tables.py  pdf2md_text.py  utils.py  x2md.py  x2md_charts.py  x2md_graphics.py  x2md_tables.py
o2md/locale/en/LC_MESSAGES/: o2md.mo  o2md.po
o2md/locale/ja/LC_MESSAGES/: o2md.mo  o2md.po
o2md/omml_converter/: __init__.py  latex_dict.py  pre_process.py
omml_converter/: omml.py  pre_process.py
output/: six_sheet_.md
tests/: __init__.py  test_d2md.py  test_isolated_group_renderer.py  test_jtd2md.py  test_jtd2md_legacy.py  test_o2md.py  test_p2md.py  test_utils.py  test_x2md.py
user_issue_check/book1/: Book1.md
user_issue_check/book1/diagnostics/: Book1_バッチ処理概要_iso_f68df8b2.csv
user_issue_check/six_sheet/diagnostics/: six_sheet__【参考】XQCシステム全体イメージ_iso_d6b79190.csv
visual_test/: five_sheet_.md  five_sheet__iso_group_grp_2b68a378.xlsx  five_sheet__iso_group_grp_8de8f723.xlsx
