[project]
name = "o2md"
version = "0.0.1"
description = "Office document to Markdown converter"
readme = "README_ollama.md"
requires-python = ">=3.9"
dependencies = [
    "python-docx>=1.2.0",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.7",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.23.0",
    "numpy>=1.24.0",
    "manga-ocr>=0.1.8",
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:DrawingML support is incomplete:UserWarning:openpyxl.reader.drawings",
]
