[project]
name = "o2md"
version = "0.0.2"
description = "Office document to Markdown converter"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.10",
    "requests>=2.32.0",
    "Pillow>=12.0.0",
    "PyMuPDF>=1.27.0",
    "numpy>=2.0.0",
    "manga-ocr>=0.1.14",
    "opencv-python>=4.10.0",
    "pytesseract>=0.3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
docling = [
    "docling==2.67.0",
]
sarashina = [
    "transformers>=5.0.0",
    "torch>=2.5.0",
    "torchvision",
    "sentencepiece",
    "protobuf",
    "accelerate",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:DrawingML support is incomplete:UserWarning:openpyxl.reader.drawings",
]
